--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,4 +8,5 @@
   </div>
 </div>
 
-<button (click)='goBack()'>Go Back</button>
+<button (click)="save()">Save</button>
+<button (click)="goBack()">Go Back</button>
